syntax = "proto3";

package sandbox.v1;

option go_package = "github.com/cohere-ai/kata-containers/src/sandbox-agent/pkg/api/pb;pb";

import "agent.proto";
import "csi.proto";
import "types.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service SandboxAgent {
  rpc Health(google.protobuf.Empty) returns (HealthResponse) {
    option (google.api.http) = { get: "/healthz" };
  }
  rpc ListVMs(ListVMsRequest) returns (ListVMsResponse) {
    option (google.api.http) = { get: "/v1/list" };
  }
  rpc Exec(ExecRequest) returns (ExecResponse) {
    option (google.api.http) = { post: "/v1/exec" body: "*" };
  }
  rpc SaveVMState(SaveVMStateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/vm/save-state" body: "*" };
  }
  rpc RestoreVMState(RestoreVMStateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/vm/restore-state" body: "*" };
  }

  rpc CreateContainer(CreateContainerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/create-container" body: "*" };
  }
  rpc StartContainer(StartContainerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/start-container" body: "*" };
  }
  rpc RemoveContainer(RemoveContainerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/remove-container" body: "*" };
  }
  rpc ExecProcess(ExecProcessRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/exec-process" body: "*" };
  }
  rpc SignalProcess(SignalProcessRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/signal-process" body: "*" };
  }
  rpc WaitProcess(WaitProcessRequest) returns (grpc.WaitProcessResponse) {
    option (google.api.http) = { post: "/v1/agent/wait-process" body: "*" };
  }
  rpc UpdateContainer(UpdateContainerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/update-container" body: "*" };
  }
  rpc UpdateEphemeralMounts(UpdateEphemeralMountsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/update-ephemeral-mounts" body: "*" };
  }
  rpc StatsContainer(StatsContainerRequest) returns (grpc.StatsContainerResponse) {
    option (google.api.http) = { post: "/v1/agent/stats-container" body: "*" };
  }
  rpc PauseContainer(PauseContainerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/pause-container" body: "*" };
  }
  rpc ResumeContainer(ResumeContainerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/resume-container" body: "*" };
  }

  rpc WriteStdin(WriteStdinRequest) returns (grpc.WriteStreamResponse) {
    option (google.api.http) = { post: "/v1/agent/write-stdin" body: "*" };
  }
  rpc ReadStdout(ReadStdoutRequest) returns (grpc.ReadStreamResponse) {
    option (google.api.http) = { post: "/v1/agent/read-stdout" body: "*" };
  }
  rpc ReadStderr(ReadStderrRequest) returns (grpc.ReadStreamResponse) {
    option (google.api.http) = { post: "/v1/agent/read-stderr" body: "*" };
  }
  rpc CloseStdin(CloseStdinRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/close-stdin" body: "*" };
  }
  rpc TtyWinResize(TtyWinResizeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/tty-win-resize" body: "*" };
  }

  rpc UpdateInterface(UpdateInterfaceRequest) returns (types.Interface) {
    option (google.api.http) = { post: "/v1/agent/update-interface" body: "*" };
  }
  rpc UpdateRoutes(UpdateRoutesRequest) returns (grpc.Routes) {
    option (google.api.http) = { post: "/v1/agent/update-routes" body: "*" };
  }
  rpc ListInterfaces(ListInterfacesRequest) returns (grpc.Interfaces) {
    option (google.api.http) = { post: "/v1/agent/list-interfaces" body: "*" };
  }
  rpc ListRoutes(ListRoutesRequest) returns (grpc.Routes) {
    option (google.api.http) = { post: "/v1/agent/list-routes" body: "*" };
  }
  rpc AddARPNeighbors(AddARPNeighborsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/add-arp-neighbors" body: "*" };
  }
  rpc GetIPTables(GetIPTablesRequest) returns (grpc.GetIPTablesResponse) {
    option (google.api.http) = { post: "/v1/agent/get-iptables" body: "*" };
  }
  rpc SetIPTables(SetIPTablesRequest) returns (grpc.SetIPTablesResponse) {
    option (google.api.http) = { post: "/v1/agent/set-iptables" body: "*" };
  }

  rpc GetMetrics(GetMetricsRequest) returns (grpc.Metrics) {
    option (google.api.http) = { post: "/v1/agent/get-metrics" body: "*" };
  }

  rpc MemAgentMemcgSet(MemAgentMemcgSetRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/memcg-set" body: "*" };
  }
  rpc MemAgentCompactSet(MemAgentCompactSetRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/compact-set" body: "*" };
  }

  rpc SetGuestDateTime(SetGuestDateTimeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/set-guest-date-time" body: "*" };
  }
  rpc CopyFile(CopyFileRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/copy-file" body: "*" };
  }
  rpc GetVolumeStats(GetVolumeStatsRequest) returns (grpc.VolumeStatsResponse) {
    option (google.api.http) = { post: "/v1/agent/get-volume-stats" body: "*" };
  }
  rpc ResizeVolume(ResizeVolumeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { post: "/v1/agent/resize-volume" body: "*" };
  }
}

message HealthResponse {
  string status = 1;
}

message ListVMsRequest {
  string node = 1;
}

message ListVMsResponse {
  repeated VMInfo vms = 1;
}

message VMInfo {
  string vm_id = 1;
  string node = 2;
}

message SaveVMStateRequest {
  string vm_id = 1;
  string path = 2;
}

message RestoreVMStateRequest {
  string vm_id = 1;
  string path = 2;
}

message ExecRequest {
  string vm_id = 1;
  string container_id = 2;
  repeated string args = 3;
  repeated string env = 4;
  string cwd = 5;
  int64 timeout_ms = 6;
}

message ExecResponse {
  string stdout = 1;
  string stderr = 2;
  int32 exit_code = 3;
}

message CreateContainerRequest {
  string vm_id = 1;
  grpc.CreateContainerRequest request = 2;
}

message StartContainerRequest {
  string vm_id = 1;
  grpc.StartContainerRequest request = 2;
}

message RemoveContainerRequest {
  string vm_id = 1;
  grpc.RemoveContainerRequest request = 2;
}

message ExecProcessRequest {
  string vm_id = 1;
  grpc.ExecProcessRequest request = 2;
}

message SignalProcessRequest {
  string vm_id = 1;
  grpc.SignalProcessRequest request = 2;
}

message WaitProcessRequest {
  string vm_id = 1;
  grpc.WaitProcessRequest request = 2;
}

message UpdateContainerRequest {
  string vm_id = 1;
  grpc.UpdateContainerRequest request = 2;
}

message UpdateEphemeralMountsRequest {
  string vm_id = 1;
  grpc.UpdateEphemeralMountsRequest request = 2;
}

message StatsContainerRequest {
  string vm_id = 1;
  grpc.StatsContainerRequest request = 2;
}

message PauseContainerRequest {
  string vm_id = 1;
  grpc.PauseContainerRequest request = 2;
}

message ResumeContainerRequest {
  string vm_id = 1;
  grpc.ResumeContainerRequest request = 2;
}

message WriteStdinRequest {
  string vm_id = 1;
  grpc.WriteStreamRequest request = 2;
}

message ReadStdoutRequest {
  string vm_id = 1;
  grpc.ReadStreamRequest request = 2;
}

message ReadStderrRequest {
  string vm_id = 1;
  grpc.ReadStreamRequest request = 2;
}

message CloseStdinRequest {
  string vm_id = 1;
  grpc.CloseStdinRequest request = 2;
}

message TtyWinResizeRequest {
  string vm_id = 1;
  grpc.TtyWinResizeRequest request = 2;
}

message UpdateInterfaceRequest {
  string vm_id = 1;
  grpc.UpdateInterfaceRequest request = 2;
}

message UpdateRoutesRequest {
  string vm_id = 1;
  grpc.UpdateRoutesRequest request = 2;
}

message ListInterfacesRequest {
  string vm_id = 1;
}

message ListRoutesRequest {
  string vm_id = 1;
}

message AddARPNeighborsRequest {
  string vm_id = 1;
  grpc.AddARPNeighborsRequest request = 2;
}

message GetIPTablesRequest {
  string vm_id = 1;
  grpc.GetIPTablesRequest request = 2;
}

message SetIPTablesRequest {
  string vm_id = 1;
  grpc.SetIPTablesRequest request = 2;
}

message GetMetricsRequest {
  string vm_id = 1;
}

message MemAgentMemcgSetRequest {
  string vm_id = 1;
  grpc.MemAgentMemcgConfig request = 2;
}

message MemAgentCompactSetRequest {
  string vm_id = 1;
  grpc.MemAgentCompactConfig request = 2;
}

message SetGuestDateTimeRequest {
  string vm_id = 1;
  grpc.SetGuestDateTimeRequest request = 2;
}

message CopyFileRequest {
  string vm_id = 1;
  grpc.CopyFileRequest request = 2;
}

message GetVolumeStatsRequest {
  string vm_id = 1;
  grpc.VolumeStatsRequest request = 2;
}

message ResizeVolumeRequest {
  string vm_id = 1;
  grpc.ResizeVolumeRequest request = 2;
}
